--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ github_username:  huwenboshi
 
 # Build settings
 markdown: kramdown
+markdown: maruku
 
-kramdown:
-    math_engine: mathjax
+#kramdown:
+#    math_engine: mathjax
