updated markdown parser to maruku

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ twitter_username: shihuwenbo
 github_username:  huwenboshi
 
 # Build settings
-markdown: kramdown
+#markdown: kramdown
 markdown: maruku
 
 #kramdown:
