--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,4 @@ twitter_username: shihuwenbo
 github_username:  huwenboshi
 
 # Build settings
-markdown: kramdown
-
-kramdown:
-    math_engine: mathjax
+markdown: redcarpet
