updated personal webpage with latest information

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: Huwenbo Shi
-email: shihuwenbo@ucla.edu
+email: hshi@hsph.harvard.edu
 description: > # this means to ignore newlines until "baseurl:"
   This is a site where I post my experience in both academic
   and non-academic world.
