--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,7 @@
 title: Huwenbo Shi
 email: hshi@hsph.harvard.edu
 description: > # this means to ignore newlines until "baseurl:"
-  This is a site where I post my experience in both academic
-  and non-academic world.
+  My name is Huwenbo Shi. This is my personal website.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://huwenboshi.github.io" # the base hostname & protocol for your site
 twitter_username: shihuwenbo
