--- a/_config.yml
+++ b/_config.yml
@@ -15,5 +15,7 @@ url: "http://huwenboshi.github.io" # the base hostname & protocol for your site
 twitter_username: shihuwenbo
 github_username:  huwenboshi
 
+theme: academic
+
 # Build settings
 markdown: kramdown
